--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,23 @@
     android:layout_height="match_parent"
     tools:openDrawer="start"
     tools:context=".activities.MainActivity">
+
     <FrameLayout
         android:id="@+id/main_FrameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </FrameLayout>
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/main_Navigation"
         app:headerLayout="@layout/drawer_header"
-        app:itemTextColor="@color/colorPrimaryDark"
-        app:itemIconTint="@color/colorPrimaryDark"
+        app:itemTextColor="@color/black"
+        app:itemIconTint="@color/black"
         android:layout_gravity="start"
         app:itemIconPadding="10dp"
         android:theme="@style/NavigationTheme"
         app:menu="@menu/menu_drawer"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"/>
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
