--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,110 +5,123 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.SignInActivity">
-   <TextView
-       android:id="@+id/signIn_tvTitle"
-       android:text="Sign in"
-       android:fontFamily="@font/nabila"
-       android:textStyle="bold"
-       android:textColor="@color/colorPrimary"
-       android:textSize="35sp"
-       android:layout_centerHorizontal="true"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/signIn_tvTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="@font/nabila"
+        android:text="Sign in"
+        android:textColor="@color/colorPrimary"
+        android:textSize="35sp"
+        android:textStyle="bold" />
+
     <ImageView
-        android:scaleType="fitXY"
-        android:alpha="0.6"
-        android:src="@drawable/bg_main"
         android:layout_width="match_parent"
+        android:layout_height="450dp"
         android:layout_alignParentBottom="true"
-        android:layout_height="350dp"/>
+        android:alpha="0.6"
+        android:scaleType="fitXY"
+        android:src="@drawable/bg_main" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/signIn_cvContainer"
-        app:cardCornerRadius="40dp"
-        app:strokeColor="#000000"
-        app:strokeWidth="1dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="10dp"
-        app:contentPadding="15dp"
-        android:layout_below="@+id/signIn_tvTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/signIn_tvTitle"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="20dp"
+        app:cardCornerRadius="40dp"
+        app:contentPadding="15dp"
+        app:strokeColor="#000000"
+        app:strokeWidth="1dp">
+
         <LinearLayout
-            android:orientation="vertical"
-            android:background="#FFFFFF"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:orientation="vertical">
+
             <TextView
-                android:text="Email:"
-                android:fontFamily="@font/nabila"
-                android:textSize="18sp"
-                android:paddingLeft="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nabila"
+                android:paddingLeft="20dp"
+                android:text="Email:"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
             <EditText
                 android:id="@+id/signIn_etEmail"
-                android:hint="Enter Your Email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:hint="Enter Your Email" />
+
             <TextView
-                android:text="Password:"
-                android:paddingLeft="18dp"
-                android:fontFamily="@font/nabila"
-                android:textSize="20sp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nabila"
+                android:paddingLeft="18dp"
+                android:text="Password:"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/signIn_etPass"
-                android:hint="Enter Your Password"
-                android:gravity="center"
-                android:inputType="textPassword"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:hint="Enter Your Password"
+                android:inputType="textPassword" />
+
             <TextView
                 android:id="@+id/signIn_tvForgot"
-                android:text="Forgot your password?"
-                android:textStyle="bold"
-                android:textSize="15sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:paddingLeft="5dp"
                 android:paddingBottom="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:text="Forgot your password?"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/signIn_btnSignIn"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/signIn_cvContainer"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        app:cornerRadius="10dp"
-        android:textSize="20sp"
         android:backgroundTint="@color/colorPrimary"
-        android:text="Sign in"/>
+        android:text="Sign in"
+        android:textSize="20sp"
+        app:cornerRadius="10dp" />
+
     <TextView
         android:id="@+id/signIn_tvSignUp"
-        android:text="New here. Create account"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:layout_below="@+id/signIn_btnSignIn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/signIn_btnSignIn"
+        android:gravity="center"
+        android:text="New here. Create account"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/signIn_btnJustGo"
         android:layout_width="200dp"
-        app:cornerRadius="10dp"
         android:layout_height="60dp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/signIn_tvSignUp"
-        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
         android:backgroundTint="@color/colorPrimary"
-        android:text="Just Go"/>
+        android:text="Just Go"
+        android:textSize="20sp"
+        app:cornerRadius="10dp" />
 
 
 </RelativeLayout>
