--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -14,6 +14,7 @@
         <RelativeLayout
             android:id="@+id/fDetail_layoutContainer"
             android:layout_width="match_parent"
+            android:layout_marginHorizontal="10dp"
             android:layout_height="wrap_content">
             <ImageView
                 android:id="@+id/fDetail_imgPost"
@@ -52,28 +53,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginRight="5dp"
                 android:text="28/03/2020"
-                android:textColor="#090909"
-                android:textSize="13sp"
+                android:textColor="@color/black"
+                android:textSize="15sp"
                 android:textStyle="italic" />
             <TextView
                 android:id="@+id/fDetail_tvEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="3dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="15dp"
                 android:layout_toRightOf="@+id/fDetail_imgAvatarUser"
                 android:text="nhan@gmail.com"
-                android:textColor="#020202"
-                android:textSize="13sp"
-                android:textStyle="italic" />
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/fDetail_imgAvatarUser"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp" />
 
@@ -81,6 +83,7 @@
                 android:id="@+id/fDetail_tvTitle"
                 android:layout_width="match_parent"
                 android:layout_toLeftOf="@id/fDetail_imgContents"
+                android:textColor="@color/black"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/fDetail_imgPost"
                 android:text="@string/title"
@@ -91,6 +94,7 @@
                 android:id="@+id/fDetail_tvAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:layout_below="@+id/fDetail_tvTitle"
                 android:text="@string/address"
                 android:textSize="18sp"
@@ -103,6 +107,7 @@
                 android:layout_below="@+id/fDetail_tvAddress"
                 android:layout_marginBottom="3dp"
                 android:text="@string/descriptions"
+                android:textColor="@color/black"
                 android:textSize="16sp" />
         </RelativeLayout>
     </ScrollView>
