--- a/app/src/main/res/layout/raw_comment.xml
+++ b/app/src/main/res/layout/raw_comment.xml
@@ -7,55 +7,76 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/raw_comment_imgAvatar"
-        app:civ_border_width="1dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         app:civ_border_color="#FFFFFF"
-        android:layout_width="30dp"
-        android:layout_height="30dp"/>
+        app:civ_border_width="1dp" />
+
 
     <androidx.cardview.widget.CardView
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
+        android:layout_margin="10dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        app:contentPadding="5dp"
         android:layout_toRightOf="@+id/raw_comment_imgAvatar"
         android:backgroundTint="#EBEBEC"
-        app:cardCornerRadius="10dp">
-        <ImageView
-            android:id="@+id/raw_comment_imgMore"
-            android:src="@drawable/ic_more_horiz_black_24dp"
-            android:layout_gravity="right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/raw_comment_tvEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:layout_centerVertical="true"
-            android:text="nhan@gmail.com"
-            android:textSize="15sp" />
+        app:cardCornerRadius="10dp"
+       >
 
-
-        <TextView
-            android:id="@+id/raw_comment_tvComment"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/raw_comment_tvPubDate"
-            android:layout_marginTop="25dp"
-            android:textSize="15sp"
+            android:layout_height="match_parent"
             android:layout_marginHorizontal="5dp"
-            android:hint="Comment 1 2 4 5  6 7" />
-        <TextView
-            android:id="@+id/raw_comment_tvPubDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_gravity="bottom|end"
-            android:text="30/03/2020 21:11"
-            android:textSize="12sp"
-            android:textStyle="italic" />
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/raw_comment_tvEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="nhan@gmail.com"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/raw_comment_imgMore"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/ic_more_horiz_black_24dp" />
+            </RelativeLayout>
+
+
+
+            <TextView
+                android:id="@+id/raw_comment_tvComment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/raw_comment_tvPubDate"
+                android:layout_marginHorizontal="5dp"
+                android:hint="Comment 1 2 4 5  6 7"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/raw_comment_tvPubDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="bottom|end"
+                android:layout_marginTop="5dp"
+                android:text="30/03/2020 21:11"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:textStyle="italic" />
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
