--- a/app/src/main/res/layout/raw_content.xml
+++ b/app/src/main/res/layout/raw_content.xml
@@ -1,29 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
+
     <androidx.cardview.widget.CardView
-        app:cardCornerRadius="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="5dp">
+
         <RelativeLayout
-            android:background="#050505"
             android:layout_width="match_parent"
-            android:padding="2dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:background="#050505">
+
             <ImageView
-                android:scaleType="fitXY"
                 android:id="@+id/raw_content_imgContent"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"/>
+                android:layout_height="200dp"
+                android:scaleType="fitXY" />
+
             <TextView
                 android:id="@+id/raw_content_tvDescription"
-                android:hint="Add Description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/raw_content_imgContent"
                 android:background="#FFFFFF"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_marginTop="5dp"
+                android:textColor="@color/black"
+                android:hint="Add Description"
+                android:textSize="18dp" />
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
