--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -90,7 +90,7 @@
 
                     <ImageView
                         android:id="@+id/fAddPost_imgPost"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="250dp"
                         android:layout_below="@+id/fAddPost_imgAvatarUser"
                         android:layout_centerHorizontal="true"
