--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -55,7 +55,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
                 android:text="28/03/2020"
-                android:textColor="#090909"
+                android:textColor="@color/black"
                 android:textSize="13sp"
                 android:textStyle="italic" />
             <TextView
@@ -66,7 +66,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_toRightOf="@+id/fDetail_imgAvatarUser"
                 android:text="nhan@gmail.com"
-                android:textColor="#020202"
+                android:textColor="@color/black"
                 android:textSize="13sp"
                 android:textStyle="italic" />
 
@@ -84,6 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/fDetail_imgPost"
                 android:text="@string/title"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -91,6 +92,7 @@
                 android:id="@+id/fDetail_tvAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:layout_below="@+id/fDetail_tvTitle"
                 android:text="@string/address"
                 android:textSize="18sp"
@@ -99,6 +101,7 @@
             <TextView
                 android:id="@+id/fDetail_tvDescription"
                 android:layout_width="match_parent"
+                android:textColor="@color/black"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/fDetail_tvAddress"
                 android:layout_marginBottom="3dp"
